Move TruffleString-JCodings bridge to a service provided by the jcodings module, inverting the dependency.